[gd_scene load_steps=5 format=3 uid="uid://18iywd4c8jr6"]

[ext_resource type="Texture2D" uid="uid://c0v2ywg47fv1d" path="res://libs/cstudio/res/icon/play-solid.svg" id="1_55h38"]
[ext_resource type="Script" path="res://libs/cstudio/panel_status.gd" id="1_m3lpx"]
[ext_resource type="Texture2D" uid="uid://cifpc158drakk" path="res://libs/cstudio/res/icon/video-solid.svg" id="2_31rg6"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbqnl"]

[node name="panel_status" type="Panel"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -32.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_m3lpx")

[node name="btn_play" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 72.0
offset_bottom = 32.0
focus_mode = 0
toggle_mode = true
icon = ExtResource("1_55h38")
icon_alignment = 1
expand_icon = true

[node name="btn_record" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -32.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_31rg6")
icon_alignment = 1
expand_icon = true

[node name="lbl_position" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -32.0
offset_right = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "648000.000 / 648000.000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="hs_timeline" type="HScrollBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -24.0
offset_right = -280.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mbqnl")
}

[connection signal="toggled" from="btn_play" to="." method="_on_btn_play_toggled"]
[connection signal="toggled" from="btn_record" to="." method="_on_btn_record_toggled"]
[connection signal="value_changed" from="hs_timeline" to="." method="_on_hs_timeline_value_changed"]
